--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -1,42 +1,50 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
-.container{
+
+.heading {
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+.container {
     display: flex;
     flex-direction: column;
-    padding: 2px;
+    padding: 12px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
-    margin-top: 20px;
-}
-.input-form{
-    display: flex;
-    flex-direction: column;
-    margin: 4px;
-    padding: 3px;
 }
 
-label{
-    padding: 3px;
+.input-form {
+    display: flex;
+    flex-direction: column;
+    margin: 3px;
+    padding: 2px;
+}
+
+label {
+    padding: 2px;
     margin-left: 10px;
     font-size: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-  
+
 }
-input{
- background-color:lemonchiffon;
-    padding: 15px;
+
+input {
+   background-color:  rgba(240, 235, 186, 0.15);
+    padding: 16px;
     outline: none;
-    border-radius:8px;
+    border-radius: 8px;
     border: 1px solid orangered;
     margin: 10px;
-    width:auto;
+    width: auto;
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;   
+    font-family: Arial, Helvetica, sans-serif;
 }
-.button1{
+
+.button1 {
     background-color: orangered;
     padding: 10px;
     border: none;
@@ -49,10 +57,15 @@ input{
     font-size: 20px;
     color: white;
     letter-spacing: 1px;
-
+    cursor: pointer;
 }
+.button1:hover{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;}
 
-.heading{
-    padding-left: 20px;
-    padding-top: 10px;
+.close {
+    border: none;
+    padding: 10px;
+    background-color: white;
+    font-size: 17px;
+    cursor: pointer;
 }
