--- a/src/components/AddPage/AddPage.css
+++ b/src/components/AddPage/AddPage.css
@@ -1,12 +1,26 @@
-.addButton {
-    padding: 20px;
+.mycard {
+    color: orangered;
+    font-size: 13px;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 20px;
+    padding-top: 40px;
+    letter-spacing: 2px;
 }
 
+.addButton {
+    padding: 20px;
+
+}
 .addButton>button {
     background-color: darksalmon;
-    font-size: 70px;
+    font-size: 40px;
     padding: 20px;
     border: none;
-    border-radius: 36px;
+    border-radius: 32px;
     height: 30vh;
+    color: white;
+    cursor: pointer;
+}
+.addButton>button:hover {
+    background-color: orangered;
 }
