--- a/src/components/AddPage/AddPage.css
+++ b/src/components/AddPage/AddPage.css
@@ -11,6 +11,7 @@
     padding: 20px;
 
 }
+
 .addButton>button {
     background-color: darksalmon;
     font-size: 40px;
@@ -21,6 +22,24 @@
     color: white;
     cursor: pointer;
 }
+
 .addButton>button:hover {
     background-color: orangered;
+}
+
+/* This is for Card */
+.card {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 10px;
+}
+
+.card-list{
+    background-color: orangered;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    padding: 20px;
+    margin: auto;
+    border-radius: 20px;
+    margin-left: 80px;
+    color: white;
 }
