--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -12,9 +12,17 @@
     display: flex;
     flex-direction: column;
     padding: 12px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
+    width: 30vw;
+    margin: auto;
+    /* position:absolute; */
+    top: 9px;
+    background-color: white;
+    justify-content: center;
+    
+    
 }
 
 .input-form {
@@ -68,4 +76,12 @@ input {
     background-color: white;
     font-size: 17px;
     cursor: pointer;
+}
+
+
+@media (max-width:500px) {
+    .container{
+        width: 90vw;
+        background-color: white;
+    }
 }
