--- a/src/components/AddPage/AddPage.css
+++ b/src/components/AddPage/AddPage.css
@@ -1,3 +1,12 @@
+.main-Div {
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 60px;
+    margin: auto;
+}
+
 .mycard {
     color: orangered;
     font-size: 13px;
@@ -27,4 +36,10 @@
     background-color: orangered;
 }
 
-/* This is for Card */
+@media (max-width:500px) {
+    .main-Div {
+        width: auto;
+        padding-top: 0px;
+    }
+
+}
