--- a/src/components/DataShow/ShowData.css
+++ b/src/components/DataShow/ShowData.css
@@ -1,23 +1,50 @@
+.cards {
+    width: 40vw;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    position: sticky;
+  position: fixed;
+  margin-left:30%;
+
+}
+
 .card {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 10px;
-}
 
+}
 
 .card-list {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    padding: 10px;
-    margin: auto;
-    color: white;
+    overflow: scroll;
 
 }
-
 
 .div-main {
     background-color: orangered;
     margin: 6px;
     padding: 10px;
     border-radius: 10px;
+    width: 30vw;
+    font-size: 12px;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 70px;
+
+}
+
+
+@media (max-width:500px) {
+    .cards{
+        width: auto;
+        margin-left: 0px;
+    
+    }
+    .div-main {
+        width: auto;
+        padding-top: 0px;
+    }
 
 }
