--- a/src/components/AddPage/AddPage.css
+++ b/src/components/AddPage/AddPage.css
@@ -8,9 +8,7 @@
     margin-top: 0px;
     padding-top: 10px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-
-
-}
+    }
 
 .mycard {
     color: orangered;
@@ -23,7 +21,30 @@
 
 .addButton {
     padding: 20px;
+    display: flex;
+    flex-direction: row;
+}
 
+.top-card{
+    background-color: orangered;
+    font-size: 14px;
+    padding: 10px;
+    margin: 10px;
+    width: 20vw;
+    border-radius: 10px;
+    color: white;
+}
+.top-card>h2{
+    background-color: orangered;
+}
+.top-card>img{
+    background-color: orangered;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    justify-content: left;
+    display: flex;
+    flex-direction: column;
 }
 
 .addButton>button {
@@ -47,8 +68,10 @@
         padding-top: 10px;
         padding-bottom: 0px;
         box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-
     }
 
+    .top-card{
+        width: 100vw;
+    }
 
 }
