--- a/src/components/DataShow/ShowData.css
+++ b/src/components/DataShow/ShowData.css
@@ -6,45 +6,59 @@
     justify-content: center;
     margin: auto;
     position: sticky;
-  position: fixed;
-  margin-left:30%;
+    position: fixed;
+    margin-left: 30%;
+    padding: 10px;
 
 }
 
 .card {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 10px;
-
 }
 
 .card-list {
     overflow: scroll;
 
+
 }
 
-.div-main {
-    background-color: orangered;
+.dataShow {
+
     margin: 6px;
     padding: 10px;
     border-radius: 10px;
     width: 30vw;
     font-size: 12px;
-    color: white;
     font-family: 'Times New Roman', Times, serif;
     margin-left: 70px;
+    background-color: orangered;
+}
+
+.dataShow>h2 {
+    background-color: orangered;
+    color: white;
+}
+
+.radioBtn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
 
 }
 
-
 @media (max-width:500px) {
-    .cards{
+    .cards {
         width: auto;
         margin-left: 0px;
-    
+
     }
-    .div-main {
+
+    .dataShow {
         width: auto;
         padding-top: 0px;
+        padding: 10px;
     }
 
 }
