--- a/src/components/DataShow/ShowData.css
+++ b/src/components/DataShow/ShowData.css
@@ -40,12 +40,18 @@
     color: white;
 }
 
+.dataShow>img {
+    background-color: orangered;
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+    padding: 0px;
+}
+
 .radioBtn {
     display: flex;
     flex-direction: row;
     justify-content: center;
-
-
 }
 
 @media (max-width:500px) {
@@ -56,9 +62,15 @@
     }
 
     .dataShow {
-        width: auto;
+        width: 76vw;
         padding-top: 0px;
-        padding: 10px;
+        padding: px;
+        margin-left: 40px;
+    }
+
+    .dataShow>img {
+        width: 70px;
+        height: 70px;
     }
 
 }
